Rename NPM package to @ui4ngx/fontawesome

--- a/example/app/app.component.html
+++ b/example/app/app.component.html
@@ -1018,7 +1018,7 @@ And one fine morning — So we beat on, boats against the current, borne back ce
                     <p>Similar to stacking WebFont icons, Layering is a new way to place SVG icons and text on top of
                         each other.
                         Moreover, layering supports more than 2 icons (a limitation of stacking WebFont icons)</p>
-                    <p><b>@ngx/fontawesome</b> provides<code class="inline">[faLayersText]</code>directive, which is
+                    <p><b>@ui4ngx/fontawesome</b> provides<code class="inline">[faLayersText]</code>directive, which is
                         equivalent to
                         FontAwesome <code class="inline">fa-layers-text</code> CSS class.
                         The directive also performs all the transformations such as translating, scaling, rotating with
