--- a/example/assets/css/styles.css
+++ b/example/assets/css/styles.css
@@ -18,7 +18,6 @@ body {
     line-height: 1.5;
     margin: 0;
     padding: 0;
-
 }
 
 a {
@@ -27,11 +26,13 @@ a {
     outline: none;
 }
 
-a:hover, a:focus {
-    color: #373e18;
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: #1c7ed6;
 }
 
 section {
+    position: relative;
     float: left;
     width: 100%;
     margin-top: 3em;
@@ -116,11 +117,10 @@ h2 span {
     display: flex;
 }
 
-
-.demo-section .external-link {
+.external-link {
     align-self: center;
-    padding-left: 10px;
-    color: darkgrey;
+    padding: 0 10px;
+    color: #1c7ed6;
 }
 
 /*
@@ -130,6 +130,7 @@ h2 span {
 */
 
 .rt-container {
+    width: 100%;
     margin: 0 auto;
     padding-left: 12px;
     padding-right: 12px;
@@ -158,10 +159,6 @@ h2 span {
 
 
 @media (min-width: 768px) {
-    .rt-container {
-        width: 750px;
-    }
-
     [class^="col-rt-"] {
         float: left;
         width: 49.9999999999%;
@@ -170,14 +167,9 @@ h2 span {
     .col-rt-6, .col-rt-12 {
         width: 100%;
     }
-
 }
 
 @media (min-width: 1200px) {
-    .rt-container {
-        width: 1170px;
-    }
-
     .col-rt-1 {
         width: 16.6%;
     }
@@ -231,35 +223,6 @@ body {
 .container > *:not(.tab-wrap) {
     padding: 0 80px;
 }
-
-/*
-h1,
-h2 {
-    margin: 0;
-    color: #444;
-    text-align: center;
-    font-size: 150%;
-    font-weight: 400;
-}
-
-h2.heading {
-    font-size: 2em;
-    margin-bottom:8px;
-}
-
-
-h2 {
-    font-size: 1em;
-    margin-bottom: 0;
-}
-
-h3 {
-    font-size: 130%;
-    font-weight: 400;
-    margin-top: 10px;
-    margin-bottom:10px;
-}
-*/
 
 p {
     line-height: 1.6;
@@ -509,4 +472,50 @@ p {
     display: grid;
     margin-right: 10px;
     text-align: center;
+}
+
+/** PURE CSS SMOOTH SCROLL TO TOP
+ Source: https://moderncss.dev/pure-css-smooth-scroll-back-to-top/
+ */
+@media (prefers-reduced-motion: no-preference) {
+    html {
+        scroll-behavior: smooth;
+    }
+}
+
+.back-to-top-wrapper {
+    position: absolute;
+    top: 100vh;
+    z-index: 10000;
+    right: 2rem;
+    bottom: -5em;
+    pointer-events: none;
+}
+
+.back-to-top-link {
+    position: fixed;
+    position: sticky;
+    pointer-events: all;
+    top: calc(100vh - 5rem);
+    display: inline-block;
+    text-decoration: none;
+    font-size: 2rem;
+    line-height: 3rem;
+    text-align: center;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    color: #1c7ed6;
+    border: 1px solid #1c7ed6;
+    background-color: #d6e3f0;
+    transition: transform 80ms ease-in;
+}
+.back-to-top-link:hover, .back-to-top-link:focus {
+    color: #1c7ed6;
+    transform: scale(1.1);
+}
+.back-to-top-link:focus {
+    outline: none;
+    color: #1c7ed6;
+    box-shadow: 0 0 0 3px #4e85c0;
 }
